Fix header positioning on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -84,16 +84,10 @@ h4 {
     min-height: 100vh;
 }
 
-.headliner-wrap {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 90vh;
-}
-
 .headliner {
-    margin-top: auto;
-    margin-bottom: auto;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     width: 100%;
 }
 
